[package]
name = "dyndns"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.97"
axum = { version = "0.8.0", features = ["macros"] }
axum-client-ip = "1.0.0"
clap = { version = "4.5.26", features = ["derive"] }
clap-verbosity-flag = {version = "3.0.2", features = ["tracing"]}
nanoid = "0.4.0"
reqwest = "0.12.12"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.135"
tokio = { version = "1", features = ["full"] }
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
